--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,25 @@
-version: '3'
+version: '3.7'
 
 services:
   web:
-    build: .
-    command: bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:80"
+    build: ./app
+    command: python manage.py runserver 0.0.0.0:80
     volumes:
-      - .:/code
+      - ./app/:/usr/src/app/
     ports:
-      - "80:80"
+      - 80:80
+    env_file:
+      - ./.env.dev
+    depends_on:
+      - db
+  db:
+    image: postgres:12.0-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_USER=hello_django
+      - POSTGRES_PASSWORD=hello_django
+      - POSTGRES_DB=hello_django_dev
+
+volumes:
+  postgres_data:
